--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,8 +1,6 @@
 .footer {
-    background-color: black;
-    color: white;
-    padding: 15px;
-    width: 100%;
-    align-items: center;
-
+  background-color: rgb(79, 79, 79);
+  color: white;
+  padding: 15px;
+  width: 100%;
 }
