--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,22 +1,28 @@
+.header {
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  top: 0px;
+  background-color: rgb(255, 115, 0);
+  width: 100%;
+  padding: 20px;
+}
+
 .navbar {
-    position: sticky;
-    top: 0px;
-    background-color: orange;
-    width: 100%;
-    padding: 10px;
+  width: 90%;
 }
 
 .navbar>a {
-    font-size: large;
-    text-decoration: none;
-    color: white;
-    margin-right: 5px;
+  font-size: larger;
+  text-decoration: none;
+  color: white;
+  margin-right: 5px;
 }
 
 .navbar>a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .navbar>a:global.active {
-    text-decoration: underline;
+  text-decoration: underline;
 }
