--- a/src/features/products/productPage/ProductPage.module.css
+++ b/src/features/products/productPage/ProductPage.module.css
@@ -1,12 +1,12 @@
 /* стили всего контейнера с карточками */
 
 .productList {
-  display: flex;
-  /* чтобы карточки поворачиваются */
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
   background-color: white;
   list-style-type: none;
-  margin: 0;
+  margin-top: 30px;
 }
 
 /* стили для одной карточки */
@@ -14,7 +14,6 @@
 .productCard {
   display: flex;
   flex-direction: column;
-  margin: 30px;
   padding: 15px;
   border: 3px solid rgb(164, 164, 164);;
   background-color: white;
@@ -26,6 +25,7 @@
   /* чтобы переносились */
   word-wrap: break-word;
   width: 200px;
+  height: 80px;
   margin: 10px;
 }
 
@@ -42,6 +42,7 @@
 .imgWrapper>img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 /* заголовок */
